feat: add static chart

--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -5,3 +5,14 @@
   position: relative;
   padding: 1.5vh;
 }
+
+.staticChart {
+  position: absolute;
+  padding: 16px;
+  width: 40vw;
+  height: 30vh;
+  background-color: lightgoldenrodyellow;
+  left: 100%;
+  top: 0;
+  z-index: 2;
+}
