--- a/src/components/CButton.module.scss
+++ b/src/components/CButton.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     padding: 16px;
-    margin: 16px;
+    //margin: 16px 0;
     border: 1px solid white;
     border-radius: 16px;
     background-color: aquamarine;
