--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -15,10 +15,11 @@
   border-radius: 16px;
   position: absolute;
   padding: 16px;
-  width: 40vw;
-  height: 30vh;
-  background-color: lightgoldenrodyellow;
-  left: 16px;
-  top: 16px;
+  width: 80%;
+  height: 80%;
+  background-color: #C5F1EF;
+  left: 10%;
+  top: 10%;
   z-index: 2;
+  display: flex;
 }
