--- a/src/components/Loading.module.scss
+++ b/src/components/Loading.module.scss
@@ -61,7 +61,16 @@
   }
 }
       
-
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1vh;
+  justify-content: center;
+  align-items: center;
+  color: white
+}
 
 
 
