--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -11,15 +11,10 @@
   border-radius: 16px;
 }
 
-.staticChart {
-  border-radius: 16px;
-  position: absolute;
-  padding: 16px;
-  width: 80%;
-  height: 80%;
-  background-color: #C5F1EF;
-  left: 10%;
-  top: 10%;
-  z-index: 2;
-  display: flex;
+.errorWrapper {
+  align-self: center;
+}
+
+.error {
+  font-weight: bold;
 }
