feat: set the temporal and spatial operation filter feat: set the limit by fetching STAC Items feat: set the max snow cover by fetching STAC Items fix: correct the error message when no Item is found style: set the scroller style for Sidebar

--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -5,7 +5,7 @@
   padding: 1.5vh;
   height: 100%;
   max-height: 100%;
-  scrollbar-color:green lightseagreen;
+  scrollbar-color:lightgreen lightseagreen;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
