--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -13,6 +13,12 @@
 
 .errorWrapper {
   align-self: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 .error {
