--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -2,8 +2,7 @@
 .wrapper {
   background-color: lightseagreen;
   position: relative;
-  width: 70%;
-  padding: 1.5vh;
+  flex: 8 1 0px;
 }
 
 .mapWrapper{
