feat: import ROI as a JSON fix: correct the app wrapper height style: modify the drawing section feat: add Icon to the buttons style: set the active button style

--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -2,7 +2,8 @@
 .wrapper {
   background-color: lightseagreen;
   position: relative;
-  flex: 8 1 0px;
+  width: 70%;
+  height: 100%;
 }
 
 .mapWrapper{
