--- a/src/App.css
+++ b/src/App.css
@@ -19,21 +19,22 @@ body {
 .app-wrapper {
   position: relative;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-
+  padding: 1.5vh 0;
 }
 
 .app-header {
   width: 100%;
-  flex: 1 1 1px;
+
+  height: 15%;
   display: flex;
 }
 
 .app-main {
   width: 100%;
-  flex: 9 1 1px;
+  height: 85%;
   display: flex;
   gap:1.5vh;
   flex-direction: row nowrap;
