--- a/src/components/CButton.module.scss
+++ b/src/components/CButton.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
     padding: 16px;
-    //margin: 16px 0;
     border: 1px solid white;
     border-radius: 16px;
     background-color: darkcyan;
@@ -10,5 +9,22 @@
         background-color: lightseagreen;
         cursor: pointer;
     }
+    display: flex;
 }
 
+.button {
+    flex: 2 1 0px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.imageWrapper {
+    flex: 1 1 0px;
+    height: 32px;
+}   
+
+.image {
+    width: 100%;
+    height: 100%;
+}
