--- a/src/components/Chart.module.scss
+++ b/src/components/Chart.module.scss
@@ -31,6 +31,15 @@
     font-size: 2rem;
 }
 
+.title {
+    color: darkslategrey;
+    font-size: 1rem;
+    align-self: center;
+    flex-grow: 1;
+    display: flex;
+    padding: 0 1.5vh;
+}
+
 .button {
     width: 5%;
     height: 100%;
