--- a/src/components/DateInput.module.scss
+++ b/src/components/DateInput.module.scss
@@ -1,11 +1,37 @@
 .wrapper {
-    width: 100%;
-    flex: 1 1 0px;
-    display: flex;
+  width: 100%;
+  display: flex;
 }
 
 .input {
-    flex: 1;
-    padding: 1vh;
-    border-radius: 16px;
+  flex: 1;
+  padding: 14px 16px;
+  border-radius: 14px;
+  border: 1px solid #2b2b2b;
+  background-color: darkcyan;
+  color: #fff;
+
+  font-size: 15px;
+  font-family: "Inter", monospace;
+  letter-spacing: 0.5px;
+
+  outline: none;
+  transition: border 0.2s ease, box-shadow 0.2s ease;
+
+  &:focus {
+    border-color: #4f8cff;
+    box-shadow: 0 0 0 3px rgba(79, 140, 255, 0.25);
+  }
+
+  &:disabled {
+    background-color: gray;
+    color: darkgray
+  }
+
+  /* Remove ugly browser styles */
+  &::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    opacity: 0.7;
+    cursor: pointer;
+  }
 }
