--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -7,6 +7,7 @@
     border: 1px solid grey;
     background-color: lightcyan;
     flex: 1 1 0px;
+    min-width: max-content;
 }
 
 .contentWrapper {
